# PRECINCT

./: .beads  .dockerignore  .env.example  .gitignore  .trufflehogignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  NOTICE.md  README.md  SECURITY.md  UPDATES.md  agentic-ai-security-cloudflare-workers-adaptation.md  agentic-ai-security-compliance-raci-mapping.md  agentic-ai-security-executive-narrative.md  agentic-ai-security-openclaw-adaptation-plan.md  agentic-ai-security-openclaw-adaptation.md  agentic-ai-security-phase3-proposal.md  agentic-ai-security-production-closure-architecture.md  agentic-ai-security-production-readiness-gaps.md  agentic-ai-security-reference-architecture.md  agentic-ai-security-stride-pasta-assurance.md  agentic-system.md  go.mod  go.sum  precinct-compliance-raci-mapping.md  precinct-executive-narrative.md  precinct-production-closure-architecture.md  precinct-production-readiness-gaps.md  precinct-reference-architecture.md  precinct-security-review.md  precinct-stride-pasta-assurance.md  requirements.txt  security_best_practices_report.md
.cosign/: README.md
.github/: dependabot.yml
.vault/: .gitignore  .nd.yaml
POC/: .dockerignore  .env  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.phoenix.yml  docker-compose.prod-intent.yml  docker-compose.strict.yml  docker-compose.yml  go.mod  go.sum
POC/sdk/python/: README.md  pyproject.toml
POC/sdk/python/mcp_gateway_sdk/: __init__.py  client.py  errors.py  runtime.py
POC/sdk/python/tests/: conftest.py  test_client.py  test_integration.py  test_runtime.py
agent/: main.py
cli/: Makefile
config/: attestation-ed25519.pub  compose-production-intent-policy.json  compose-production-intent.env  destinations.yaml  extensions-demo.yaml  fluent-bit-opensearch-audit.conf  guard-artifact.bin.sig  model-provider-catalog.v2.yaml  model-provider-catalog.v2.yaml.sig  oauth-resource-server.yaml  otel-collector-phoenix.yaml  otel-collector.yaml  risk_thresholds.yaml  spiffe-ids.yaml  token-exchange.yaml  tool-registry.yaml  ui.yaml
docs/: ARCHITECTURE.md  DESIGN.md  README.md  agentic-security-architecture.skill.md  api-reference.md  configuration-reference.md  current-state-and-roadmap.md  deployment-guide.md  docker-mcp-integration.md  docker-mcp-setup.md  eks-iac.md  executive-narrative.md  oauth-external-clients.md  oauth-protected-resource.md  securing-agentic-ai-reference-architecture.md  sidecar-identity.md  spiffe-setup.md  spike-token-substitution.md  supply-chain-images.md  token-exchange.md
examples/: README.md  run.sh
examples/python/: Dockerfile  README.md  demo.py  pyproject.toml
infra/: eks
sample-agents/dspy_researcher/: README.md  __init__.py  pyproject.toml  test_agent.py
sample-agents/pydantic_researcher/: README.md  agent.py  pyproject.toml
scripts/: repave.sh  (+19 more)
tools/compliance/: control_taxonomy.yaml  evidence_schema_v2.json  generate.py  pyproject.toml  requirements.txt  test_generate.py
(+2130 files in other folders)
