[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precinct-pydantic-researcher"
version = "0.1.0"
description = "Sample PydanticAI research agent for PRECINCT"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.0",
    "mcp-gateway-sdk",
    "openinference-instrumentation-pydantic-ai>=0.1.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-exporter-otlp>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "pydantic-ai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.uv.sources]
mcp-gateway-sdk = { path = "../../sdk/python", editable = true }
