[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precinct-compliance-tools"
version = "0.1.0"
description = "Compliance reporting utilities for PRECINCT"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fpdf2>=2.7",
    "jsonschema>=4.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
